--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-template",
+  "name": "arknights-ost-rss",
   "version": "1.0.0",
   "description": "node template",
   "main": "index.js",
