--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -41,6 +41,10 @@ jobs:
           node-version: 20.x
       - name: Install dependencies
         run: npm i
+      - name: Debug
+        run: |
+          id
+          ls -la
       - name: Build
         run: npm start
       - name: Upload artifact
