--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -41,12 +41,8 @@ jobs:
           node-version: 20.x
       - name: Install dependencies
         run: npm i
-      - name: Debug
-        run: |
-          id
-          ls -la
       - name: Build
-        run: npm start
+        run: sudo npm start
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
 
