--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -45,4 +45,4 @@ jobs:
     steps:
       - name: Debug
         run: |
-          echo "${{ needs.update.outputs.result }}"
+          echo "${{ needs.update.outputs }}"
