--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -10,6 +10,8 @@ permissions: write-all
 jobs:
   update:
     runs-on: ubuntu-latest
+    outputs:
+      result: ${{ steps.compare.outputs.result }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -39,10 +41,3 @@ jobs:
     needs: update
     if: ${{ needs.update.outputs.result == 1 }}
     uses: ./.github/workflows/jekyll-gh-pages.yml
-  debug:
-    needs: update
-    runs-on: ubuntu-latest
-    steps:
-      - name: Debug
-        run: |
-          echo "${{ needs.update.outputs }}"
