--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -40,3 +40,19 @@ jobs:
     needs: update
     if: ${{ needs.update.outputs.result == 1 }}
     uses: ./.github/workflows/jekyll-gh-pages.yml
+  update_last_update_data:
+    needs: update
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Update last_update.md
+        run: |
+          echo "# Last update
+
+          \`$(date)\`
+          " > last_update.md
+      - name: Show
+        run: cat last_update.md
