--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -64,7 +64,9 @@ jobs:
         run: cat last_update.md
       - name: Push
         run: |
-          git config --global user.name 'GitHub Actions [bot]'
+          git config user.name 'GitHub Actions [bot]'
           git add last_update.md
           git commit -m 'Update last_update.md'
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
