--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -24,9 +24,13 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  # Update last_update.md
+  update_last_update_date:
+    uses: ./.github/workflows/update-last-update-date.yml
   # Build job
   build:
     runs-on: ubuntu-latest
+    needs: update_last_update_date
     steps:
       - name: Checkout
         uses: actions/checkout@v3
