--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -27,9 +27,9 @@ jobs:
         run: |
           curl -LO https://sharo-jef.github.io/arknights-ost-rss/rss.xml
           npx fast-xml-parser rss.xml -o rss.json
-          jq -r '.rss.channel.item[].title' | sort | tee rss.txt
+          jq -r '.rss.channel.item[].title' rss.json | sort | tee rss.txt
       - name: Fetch API data
-        run: curl -LO https://monster-siren.hypergryph.com/api/songs | jq -r '.data.list[].name' | sort | tee api.txt
+        run: curl -L https://monster-siren.hypergryph.com/api/songs | jq -r '.data.list[].name' | sort | tee api.txt
       - name: Compare
         id: compare
         run: |
