--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           node-version: 20.x
       - name: Install dependencies
-        run: npm i
+        run: npm i --legacy-peer-deps
       - name: Build
         run: sudo npm start
       - name: Upload artifact
