--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           node-version: 20.x
       - name: Install dependencies
-        run: npm i
+        run: npm i --legacy-peer-deps
       - name: Fetch RSS data
         run: |
           curl -LO https://sharo-jef.github.io/arknights-ost-rss/rss.xml
